# HedgeForge

./: .gitignore  README.md  SETUP.md  main.py  pyproject.toml  requirements.txt  structure.md
app/: __init__.py  main.py
config/: __init__.py  settings.yaml
data/raw/: portfolio_acc001_taxable.csv  portfolio_acc002_ira.csv
docs/: README_quarto.md  _quarto.yml  appendix.qmd  data_pipeline.qmd  eda.qmd  index.qmd  methodology.qmd  optimization_results.qmd  outline.md  risk_metrics.qmd
docs/_site/: README_quarto.html  index.html  search.json
docs/_site/site_libs/bootstrap/: bootstrap-3c09e048dec4d4e3809a9b6248dbe6a6.min.css
internal_docs/: modeling_notes.md  phase_1_2_logical_plan.md  roadmap.md  structure.md
notebooks/: __init__.py
scripts/: __init__.py  run_pipeline.py
src/: __init__.py  backtest.py  constraints.py  forecasting.py  optimizer.py  risk.py  utils.py
tests/: test_risk.py
