[project]
name = "hedge-forge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=22.0.0",
    "cvxpy>=1.2.0",
    "duckdb>=0.7.0",
    "flake8>=4.0.0",
    "lightgbm>=3.3.0",
    "matplotlib>=3.5.0",
    "mypy>=0.950",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "pathlib2>=2.3.0",
    "pytest>=6.0.0",
    "pytest-cov>=3.0.0",
    "pyyaml>=6.0",
    "quarto>=0.1.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "seaborn>=0.11.0",
    "streamlit>=1.20.0",
    "xgboost>=1.6.0",
]
